--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 28 13:05:03 2018</p>
+         Last Run: Sat Jul 28 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>02:00 PM</td>
-                        <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>0</td>
-                        <td>27</td>
-                        <td>7</td>
-                        <td>10</td>
-                        <td>ENE</td>
-                        <td>16</td>
-                     </tr>
-                     <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NE</td>
-                        <td>16</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -83,7 +71,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "02:00 PM",
              "03:00 PM"
            ],
            "datasets":[
@@ -93,7 +80,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
                  "25"
                ]
              },
@@ -103,7 +89,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
                  "25"
                ]
              }
@@ -145,7 +130,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "02:00 PM",
              "03:00 PM"
            ],
            "datasets":[
@@ -154,7 +138,6 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
                  "0"
                ]
              },
@@ -163,8 +146,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "27",
-                 "27"
+                 "26"
                ]
              },
              {
@@ -172,8 +154,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
-                 "16"
+                 "21"
                ]
              }
            ]
@@ -191,7 +172,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 28 13:05:03 2018</p>
+         Last Run: Sat Jul 28 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -217,10 +198,10 @@
                         <td>23</td>
                         <td>0</td>
                         <td>51</td>
-                        <td>1</td>
-                        <td>16</td>
-                        <td>ESE</td>
-                        <td>77</td>
+                        <td>2</td>
+                        <td>14</td>
+                        <td>SE</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -232,31 +213,31 @@
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>75</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>64</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>63</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>64</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -381,8 +362,8 @@
                "data":[
                  "51",
                  "53",
-                 "55",
-                 "63"
+                 "54",
+                 "61"
                ]
              },
              {
@@ -390,10 +371,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "77",
-                 "75",
-                 "64",
-                 "64"
+                 "66",
+                 "63",
+                 "54",
+                 "58"
                ]
              }
            ]
