--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 28 17:05:03 2018</p>
+         Last Run: Sat Jul 28 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>2</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>66</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>63</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>1</td>
+                        <td>Clear</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>0</td>
                         <td>54</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>54</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -72,9 +72,9 @@
                         <td>15</td>
                         <td>62</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>58</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,7 +121,7 @@
                "data":[
                  "23",
                  "22",
-                 "21",
+                 "22",
                  "20"
                ]
              },
@@ -133,7 +133,7 @@
                "data":[
                  "23",
                  "22",
-                 "21",
+                 "22",
                  "20"
                ]
              }
@@ -188,7 +188,7 @@
                "data":[
                  "0",
                  "0",
-                 "1",
+                 "0",
                  "15"
                ]
              },
@@ -197,8 +197,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "53",
+                 "50",
+                 "52",
                  "54",
                  "62"
                ]
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "66",
-                 "63",
-                 "54",
-                 "58"
+                 "46",
+                 "32",
+                 "27",
+                 "38"
                ]
              }
            ]
