--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 29 13:05:03 2018</p>
+         Last Run: Sun Jul 29 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -31,13 +31,13 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>48</td>
                         <td>2</td>
                         <td>14</td>
-                        <td>E</td>
+                        <td>ESE</td>
                         <td>26</td>
                      </tr>
                      <tr>
@@ -46,23 +46,23 @@
                         <td>23</td>
                         <td>23</td>
                         <td>2</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>24</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
                         <td>2</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>31</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>45</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,7 +119,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "23",
+                 "24",
                  "23",
                  "22",
                  "20"
@@ -131,7 +131,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "23",
+                 "24",
                  "23",
                  "22",
                  "20"
@@ -197,9 +197,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "50",
-                 "53",
+                 "48",
+                 "49",
+                 "52",
                  "61"
                ]
              },
@@ -209,9 +209,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "26",
-                 "24",
-                 "31",
-                 "45"
+                 "22",
+                 "29",
+                 "43"
                ]
              }
            ]
