--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 29 15:05:03 2018</p>
+         Last Run: Sun Jul 29 16:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,10 +33,10 @@
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
+                        <td>5</td>
+                        <td>49</td>
                         <td>2</td>
-                        <td>48</td>
-                        <td>2</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ESE</td>
                         <td>26</td>
                      </tr>
@@ -45,36 +45,36 @@
                         <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>2</td>
-                        <td>49</td>
+                        <td>0</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>23</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>2</td>
-                        <td>51</td>
+                        <td>Clear</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>52</td>
+                        <td>0</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>31</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>15</td>
                         <td>60</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>44</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,8 +121,8 @@
                "data":[
                  "24",
                  "23",
-                 "23",
-                 "21"
+                 "22",
+                 "20"
                ]
              },
              {
@@ -133,8 +133,8 @@
                "data":[
                  "24",
                  "23",
-                 "23",
-                 "21"
+                 "22",
+                 "20"
                ]
              }
            ]
@@ -186,9 +186,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "2",
+                 "5",
+                 "0",
+                 "0",
                  "15"
                ]
              },
@@ -197,9 +197,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
                  "49",
-                 "51",
+                 "50",
+                 "52",
                  "60"
                ]
              },
@@ -209,9 +209,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "26",
-                 "23",
-                 "31",
-                 "44"
+                 "22",
+                 "29",
+                 "42"
                ]
              }
            ]
