--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 29 17:05:04 2018</p>
+         Last Run: Sun Jul 29 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>5</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -54,7 +54,7 @@
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>30</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -197,7 +197,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
+                 "48",
                  "50",
                  "52",
                  "60"
@@ -210,7 +210,7 @@
                "data":[
                  "26",
                  "22",
-                 "30",
+                 "29",
                  "43"
                ]
              }
