--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 29 18:05:03 2018</p>
+         Last Run: Sun Jul 29 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,7 +30,7 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
                         <td>5</td>
@@ -38,7 +38,7 @@
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>26</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -50,19 +50,19 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>22</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>0</td>
                         <td>52</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>29</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -72,9 +72,9 @@
                         <td>15</td>
                         <td>60</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
-                        <td>43</td>
+                        <td>36</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,7 +121,7 @@
                "data":[
                  "24",
                  "23",
-                 "22",
+                 "23",
                  "21"
                ]
              },
@@ -133,7 +133,7 @@
                "data":[
                  "24",
                  "23",
-                 "22",
+                 "23",
                  "21"
                ]
              }
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "26",
+                 "31",
+                 "21",
                  "22",
-                 "29",
-                 "43"
+                 "36"
                ]
              }
            ]
