--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 30 00:05:24 2018</p>
+         Last Run: Mon Jul 30 01:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,19 +34,19 @@
                         <td>24</td>
                         <td>24</td>
                         <td>5</td>
-                        <td>48</td>
+                        <td>46</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>45</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>3</td>
-                        <td>52</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -55,26 +55,26 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>0</td>
-                        <td>56</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>5</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>25</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>15</td>
-                        <td>63</td>
+                        <td>1</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>38</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -120,8 +120,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "24",
+                 "23",
                  "22",
-                 "21",
                  "20"
                ]
              },
@@ -132,8 +132,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "24",
+                 "23",
                  "22",
-                 "21",
                  "20"
                ]
              }
@@ -188,8 +188,8 @@
                "data":[
                  "5",
                  "3",
-                 "0",
-                 "15"
+                 "5",
+                 "1"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
+                 "46",
+                 "49",
                  "52",
-                 "56",
-                 "63"
+                 "60"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
+                 "47",
                  "25",
-                 "25",
-                 "38"
+                 "27",
+                 "27"
                ]
              }
            ]
