--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 30 07:05:27 2018</p>
+         Last Run: Mon Jul 30 08:05:14 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>8</td>
-                        <td>45</td>
+                        <td>1</td>
+                        <td>46</td>
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>30</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -50,31 +50,31 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>33</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>2</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>1</td>
                         <td>50</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>42</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>0</td>
-                        <td>58</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>1</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>34</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,8 +121,8 @@
                "data":[
                  "24",
                  "24",
-                 "22",
-                 "21"
+                 "23",
+                 "20"
                ]
              },
              {
@@ -133,8 +133,8 @@
                "data":[
                  "24",
                  "24",
-                 "22",
-                 "21"
+                 "23",
+                 "20"
                ]
              }
            ]
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "8",
+                 "1",
                  "0",
-                 "2",
-                 "0"
+                 "1",
+                 "1"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
+                 "46",
                  "47",
                  "50",
-                 "58"
+                 "59"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "33",
-                 "42",
-                 "34"
+                 "19",
+                 "37",
+                 "45",
+                 "41"
                ]
              }
            ]
